# knotdiscovery

./: CMakeLists.txt  README.md
cmake/: FindAvahi.cmake
example/: CMakeLists.txt  main.cpp
include/knot/: discovery.h
redist/: README.md
src/: adapter.c  adapter.h  android.c  avahi.c  bonjour.c  esp.c  mdns.h  mdnsh.c
